[gd_scene load_steps=6 format=3 uid="uid://dktaeac8uww5d"]

[ext_resource type="Script" uid="uid://7y8x2q0p5x0f" path="res://script/trash.gd" id="1_ix7n1"]
[ext_resource type="FontFile" uid="uid://bkdi44swjm0sp" path="res://assets/Font Text/toxigenesis bd.otf" id="3_6dsr2"]
[ext_resource type="Texture2D" uid="uid://ds3bktaa2nn47" path="res://assets/tileMap/asset_tilemap/Trash_sheets.png" id="3_ouqvo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ionjd"]
radius = 127.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tplsk"]
atlas = ExtResource("3_ouqvo")
region = Rect2(0, 0, 200, 200)

[node name="Trash" type="Node2D"]
script = ExtResource("1_ix7n1")

[node name="Trash_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Trash\'sCollisionShape" type="CollisionShape2D" parent="Trash_area"]
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_ionjd")

[node name="Press[E]" type="Control" parent="."]
visible = false
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_top = -126.0
offset_right = 40.0
offset_bottom = -48.0

[node name="Label" type="Label" parent="Press[E]"]
layout_mode = 0
offset_left = -65.0
offset_top = 15.999996
offset_right = 196.0
offset_bottom = 49.999996
scale = Vector2(0.48308468, 0.5673972)
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("3_6dsr2")
theme_override_font_sizes/font_size = 20
text = "TEKAN [P] UNTUK AMBIL"

[node name="Sprite2D" type="Sprite2D" parent="."]
visibility_layer = 1048577
position = Vector2(-1, -36)
texture = SubResource("AtlasTexture_tplsk")

[connection signal="area_entered" from="Trash_area" to="." method="_on_trash_area_area_entered"]
[connection signal="area_exited" from="Trash_area" to="." method="_on_trash_area_area_exited"]
